--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,52 @@
 body {
-    background-color: gray;
-	/* Use a system font, if none are available use an available sans-sarif   font */
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	margin: 0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+  font-family: "Arial", sans-serif;
 }
 
-section.board {
-  display: grid;
-  grid-template-rows: repeat(3, 10vmin);
-  grid-template-columns: repeat(3, 10vmin);
-  grid-gap: 0vmin;
-}
-
-div {
-  border: 3px solid black;
-  font-size: 8vmin;
+section {
   text-align: center;
-  vertical-align: middle;
 }
+
+#title {
+  font-size: 100px;
+  color: #d7a62f;
+  margin: 10px auto;
+}
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  width: 306px;
+  margin: 10px auto;
+  background-color: #11213a;
+  color: #04c0b2;
+}
+
+.cell {
+  font-family: "Permanent Marker", cursive;
+  width: 100px;
+  height: 100px;
+  box-shadow: 2px 2px 2px 2px #ecd7ba;
+  border: 2px solid #ecd7ba;
+  cursor: pointer;
+  line-height: 100px;
+  font-size: 60px;
+}
+
+.game--status {
+  font-size: 50px;
+  color: #d7a62f;
+  margin: 20px auto;
+}
+
+.restart {
+  background-color: #f7e4ac;
+  width: 200px;
+  height: 50px;
+  font-size: 25px;
+  color: #5586e2;
+  box-shadow: 2px 2px 2px 2px #d86c23;
+  border: 2px solid #d86c23;
+
+} solid #d86c23;
+
+
